[package]
name = "irctokens"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "RFC1459 and IRCv3 protocol tokeniser"
homepage = "https://github.com/jesopo/irctokens-rs"
documentation = "https://docs.rs/irctokens/"
repository = "https://github.com/jesopo/irctokens-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "tokenise"
harness = false
[[bench]]
name = "format"
harness = false
